dev-ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    rules:
        - http:
            paths:
                - path: /?(.*)
                  backend:
                    serviceName: goldmund-client-service
                    servicePort: 3000
                - path: /api/?(.*)
                  backend:
                    serviceName: goldmund-api-service
                    servicePort: 5000
